--- a/index.html
+++ b/index.html
@@ -1,36 +1,60 @@
-<DOCTYPE! html>
-<html lang="en" ng-app="LunchCheck">
+<!DOCTYPE html>
+<html ng-app='app'>
   <head>
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/css/bootstrap.css">
-    <title>Lunch Checker</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="angular.min.js"></script>
-    <script type="text/javascript" src='app.js'></script>
-
+    <script src='app.js'></script>
+    <title>Shopping List Check Off</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/css/bootstrap.css">
     <style>
-      .message { font-size: 1.3em; font-weight: bold; }
+      .emptyMessage {
+        font-weight: bold;
+        color: red;
+        font-size: 1.2em;
+      }
+      li {
+        margin-bottom: 7px;
+        font-size: 1.2em;
+      }
+      li > button {
+        margin-left: 6px;
+      }
+      button > span {
+        color: green;
+      }
     </style>
-
   </head>
-<body>
-   <div class="container" ng-controller="LunchCheckController">
-     <h1>Lunch Checker</h1>
 
-         <div class="form-group">
-             <input id="lunch-menu" type="text"
-             placeholder="list comma separated dishes you usually have for lunch"
-             class="form-control" ng-model="list" ng-style="boxStyle">
-         </div>
-         <div ng-style ="fontStyle">
-           {{msg}}
-         </div>
-         <div class="form-group">
-             <button class="btn btn-default" ng-click="checkItems()">Check If Too Much</button>
-         </div>
-         <div class="form-group message">
-                 <span>Note: An empty item is not considered under the count Ex. [, , , , , ] will ask you to enter data instead of displaying "Too Much!"</span>
-         </div>
-   </div>
-   <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/js/bootstrap.js">
+<body>
+  <div class="container">
+  <h1>Shopping List Check Off</h1>
+
+  <div class="row">
+
+    <!-- To Buy List -->
+    <div ng-controller='ToBuyController as buy' class="col-md-6">
+     <h2>To Buy:</h2>
+     <ul>
+       <li ng-repeat="item in buy.items">
+        <div style="width: 150px; display:inline-block">Buy {{item.quantity}} {{item.name}} </div>
+         <button class="btn btn-default" ng-click="buy.removeItem($index);"> Bought</button>
+       </li>
+     </ul>
+     <div class="emptyMessage" ng-if="buy.items.length == 0">Everything is bought!</div>
+    </div>
+
+    <!-- Already Bought List -->
+    <div ng-controller='AlreadyBoughtController as bought' class="col-md-6">
+     <h2>Already Bought:</h2>
+     <ul>
+       <li ng-repeat="item in bought.items">
+         Bought {{item.quantity}} {{item.name}}
+       </li>
+     </ul>
+     <div class="emptyMessage" ng-if="bought.items.length == 0">Nothing bought yet.</div>
+    </div>
+  </div>
+</div>
+<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/js/bootstrap.js">
 </body>
 </html>
